--- a/utils/conda/heMojiGPU.yml
+++ b/utils/conda/heMojiGPU.yml
@@ -300,15 +300,30 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
+    - altair==3.3.0
+    - base58==1.0.3
     - bleach==1.5.0
+    - blinker==1.4
+    - boto3==1.12.39
+    - botocore==1.15.39
     - emoji==0.4.5
+    - enum-compat==0.0.3
     - h5py==2.7.0
     - html5lib==0.9999999
+    - jmespath==0.9.5
     - keras==2.0.9
     - matplotlib==2.2.5
     - numpy==1.16.6
+    - pathtools==0.1.2
+    - pydeck==0.3.0
+    - s3transfer==0.3.3
     - scikit-learn==0.19.0
+    - streamlit==0.55.2
     - tensorflow-tensorboard==0.1.8
     - text-unidecode==1.0
+    - toml==0.10.0
+    - tzlocal==2.0.0
+    - validators==0.14.3
+    - watchdog==0.10.2
 prefix: /home/nlp/danielj/anaconda3/envs/heMojiGPU
 
